# compilecat

./: .gitignore  CHANGELOG.md  NOTICE  PUBLISHING.md  README.md  follow_ups.md  package.json  pnpm-lock.yaml  rollup.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
bench/: type-donors.mjs
example/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
rust/: .gitignore  ARCHITECTURE.md  CUTOVER_PLAN.md  Cargo.toml  DEFERRED.md  README.md  REMAINING_WORK.md  SPIKE_module_graph.md  TYPE_DIRECTED_OPTIMIZATIONS.md  WORKLOG.md  rustfmt.toml
rust/crates/compilecat_core/: Cargo.toml
rust/crates/compilecat_core/src/: cross_file.rs  lib.rs  module_cache.rs  options.rs
rust/crates/compilecat_core/src/analysis/: cfg.rs  data_flow.rs  graph.rs  live_vars.rs  local_var_table.rs  mod.rs  purity.rs  purity_design.md  reaching.rs  tri.rs  type_shape.rs
rust/crates/compilecat_core/src/passes/: block_flatten.rs  block_mutate.rs  cleanup_residue.rs  dead_assignments.rs  dead_code.rs  directives.rs  flow_inline.rs  fold.rs  gate.rs  inline_functions.rs  inline_variables.rs  minimize_conditions.rs  minimize_exit_points.rs  minimized_condition.rs  mod.rs  normalize.rs  remove_unused.rs  sroa.rs  strip_directives.rs  unroll.rs  util.rs
rust/crates/compilecat_core/tests/: gating.rs  pipeline.rs
rust/crates/compilecat_napi/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
rust/crates/compilecat_napi/npm/darwin-arm64/: README.md  package.json
rust/crates/compilecat_napi/npm/darwin-x64/: README.md  package.json
rust/crates/compilecat_napi/npm/linux-arm64-gnu/: README.md  package.json
rust/crates/compilecat_napi/npm/linux-x64-gnu/: README.md  package.json
rust/crates/compilecat_napi/npm/wasm32-wasi/: README.md  package.json
rust/crates/compilecat_napi/npm/win32-x64-msvc/: README.md  package.json
rust/crates/compilecat_napi/src/: lib.rs
rust/crates/compilecat_wasm/: Cargo.toml
rust/crates/compilecat_wasm/src/: lib.rs
scripts/: build-all.mjs  bump-version.mjs  clean.mjs  patch-wasm-pkg.mjs  publish.mjs
src/: bun.ts  compiler.ts  esbuild.ts  farm.ts  filter.ts  index.ts  plugin.ts  rolldown.ts  rollup.ts  rsbuild.ts  rspack.ts  type-resolve.ts  vite.ts  wasm.ts  webpack.ts
tst/: cfg.test.ts  constfold.test.ts  copyprop.test.ts  cross-file.test.ts  dataflow.test.ts  dce.test.ts  dead-assigns.test.ts  discover.test.ts  effects.test.ts  (+39 more)
(+80 files in other folders)
