[package]
name = "compilecat_napi"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# cdylib → the .node addon loaded from JS.
[lib]
crate-type = ["cdylib"]

[dependencies]
compilecat_core = { path = "../compilecat_core" }
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"
oxc_span = { workspace = true }

[build-dependencies]
napi-build = "2"
