[package]
name = "compilecat_wasm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# cdylib → the `.wasm` artifact `wasm-bindgen` / `wasm-pack` consume. This crate
# is the browser/edge twin of `compilecat_napi`: same `compilecat_core`, a
# different binding boundary.
[lib]
crate-type = ["cdylib"]

[dependencies]
compilecat_core = { path = "../compilecat_core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
